@@ -14,6 +14,8 @@ ui_in_files= \
 	$(NULL)
 ui_DATA = $(ui_in_files:.glade=.ui)
 
+CLEANFILES = about.ui
+
 EXTRA_DIST = \
 	$(ui_SOURCES) \
 	$(ui_DATA) \
