@@ -1,6 +1,6 @@
 <?xml version="1.0"?><interface>
   
-<object class="GtkAboutDialog" id="dlg"><property name="border_width">5</property><property name="window_position">center-on-parent</property><property name="type_hint">dialog</property><property name="has_separator">False</property><property name="program_name">PCManFM</property><property name="version">1.2.2</property><property name="copyright" translatable="yes">Copyright (C) 2009 - 2014</property><property name="website">http://sourceforge.net/projects/pcmanfm</property><property name="license">PCMan File Manager
+<object class="GtkAboutDialog" id="dlg"><property name="border_width">5</property><property name="window_position">center-on-parent</property><property name="type_hint">dialog</property><property name="has_separator">False</property><property name="program_name">PCManFM</property><property name="version">1.2.3</property><property name="copyright" translatable="yes">Copyright (C) 2009 - 2014</property><property name="website">http://sourceforge.net/projects/pcmanfm</property><property name="license">PCMan File Manager
 
 Copyright &#169; 2009 - 2013 &#x6D2A;&#x4EFB;&#x8AED; (Hong Jen Yee)
 Copyright &#169; 2012 - 2014 Andriy Grytsenko
